--- a/valkey-cluster/templates/metrics_service.yaml
+++ b/valkey-cluster/templates/metrics_service.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "valkey.fullname" . }}-metrics
+  name: {{ include "valkey-cluster.fullname" . }}-metrics
   namespace: {{ .Values.namespace }}
-  {{- $labels := include "valkey.tplvalues.merge" ( dict "values" ( list .Values.metrics.service.labels .Values.commonLabels ) "context" . ) }}
-  labels: {{- include "valkey.standardlabels" ( dict "customLabels" $labels "context" $ ) | nindent 4 }}
+  {{- $labels := include "valkey-cluster.tplvalues.merge" ( dict "values" ( list .Values.metrics.service.labels .Values.commonLabels ) "context" . ) }}
+  labels: {{- include "valkey-cluster.standardlabels" ( dict "customLabels" $labels "context" $ ) | nindent 4 }}
     app.kubernetes.io/component: "metrics"
 spec:
   clusterIP: {{ .Values.metrics.service.clusterIP }}
@@ -14,7 +14,7 @@ spec:
     - name: metrics
       port: {{ .Values.metrics.containerPorts.http }}
       targetPort: http-metrics
-  {{- $podLabels := include "valkey.tplvalues.merge" ( dict "values" ( list .Values.podLabels .Values.commonLabels ) "context" . ) }}
-  selector: {{- include "valkey.matchLabels" ( dict "customLabels" $podLabels "context" $ ) | nindent 4 }}
+  {{- $podLabels := include "valkey-cluster.tplvalues.merge" ( dict "values" ( list .Values.podLabels .Values.commonLabels ) "context" . ) }}
+  selector: {{- include "valkey-cluster.matchLabels" ( dict "customLabels" $podLabels "context" $ ) | nindent 4 }}
 {{- end }}
 
