--- a/valkey-cluster/templates/configmap.yaml
+++ b/valkey-cluster/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "valkey.fullname" . }}-config
+  name: {{ include "valkey-cluster.fullname" . }}-config
   labels:
-    {{- include "valkey.labels" . | nindent 4 }}
+    {{- include "valkey-cluster.labels" . | nindent 4 }}
 data:
   valkey.conf: |-
-{{ include "valkey.generateConfig" . | indent 4 }}
+{{ include "valkey-cluster.generateConfig" . | indent 4 }}
