--- a/valkey-cluster/templates/deploy_valkey.yaml
+++ b/valkey-cluster/templates/deploy_valkey.yaml
@@ -1,4 +1,4 @@
-{{- $fullname := include "valkey.fullname" . }}
+{{- $fullname := include "valkey-cluster.fullname" . }}
 {{- $storage := .Values.dataStorage }}
 {{- $useExistingPVC := and $storage.enabled (not (empty $storage.persistentVolumeClaimName)) }}
 {{- $createPVC := and $storage.enabled (not (empty $storage.requestedSize)) (empty $storage.persistentVolumeClaimName) }}{{- $useConfigMap := or (not (empty .Values.valkeyConfig)) (gt (int .Values.replicaCount) 1) -}}
@@ -7,20 +7,20 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ include "valkey.fullname" . }}
+  name: {{ include "valkey-cluster.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "valkey.labels" . | nindent 4 }}
+    {{- include "valkey-cluster.labels" . | nindent 4 }}
 spec:
-  serviceName: {{ include "valkey.fullname" . }}-headless
+  serviceName: {{ include "valkey-cluster.fullname" . }}-headless
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "valkey.selectorLabels" . | nindent 6 }}
+      {{- include "valkey-cluster.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "valkey.selectorLabels" . | nindent 8 }}
+        {{- include "valkey-cluster.selectorLabels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -35,7 +35,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
-      serviceAccountName: {{ include "valkey.serviceAccountName" . }}
+      serviceAccountName: {{ include "valkey-cluster.serviceAccountName" . }}
       securityContext:
       {{- toYaml .Values.podSecurityContext | nindent 8 }}
       
@@ -72,7 +72,7 @@ spec:
       {{- end }}
 
       containers:
-        - name: {{ include "valkey.fullname" . }}
+        - name: {{ include "valkey-cluster.fullname" . }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           command: ["/bin/sh", "-c"]
           args:
@@ -135,7 +135,7 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- if .Values.lifecycleHooks }}
-          lifecycle: {{- include "valkey.tplvalues.render" (dict "value" .Values.lifecycleHooks "context" $) | nindent 12 }}
+          lifecycle: {{- include "valkey-cluster.tplvalues.render" (dict "value" .Values.lifecycleHooks "context" $) | nindent 12 }}
           {{- end }}
           volumeMounts:
             - name: cluster-script
@@ -157,7 +157,7 @@ spec:
             {{- end }}
         {{- if .Values.metrics.enabled }}
         - name: metrics
-          image: {{ template "valkey.metrics.image" . }}
+          image: {{ template "valkey-cluster.metrics.image" . }}
           command:
             - "/redis_exporter"
           args:
@@ -195,16 +195,16 @@ spec:
           emptyDir: {}
         - name: scripts
           configMap:
-            name: {{ include "valkey.fullname" . }}-init-scripts
+            name: {{ include "valkey-cluster.fullname" . }}-init-scripts
             defaultMode: 0555
         - name: cluster-script 
           configMap:
-            name: {{ include "valkey.fullname" . }}-cluster-script
+            name: {{ include "valkey-cluster.fullname" . }}-cluster-script
             defaultMode: 0755
         {{- if $useConfigMap }}
         - name: valkey-config
           configMap:
-            name: {{ include "valkey.fullname" . }}-config
+            name: {{ include "valkey-cluster.fullname" . }}-config
         {{- end }}
         {{- range .Values.extraValkeySecrets }}
         - name: {{ .name }}-valkey
@@ -258,7 +258,7 @@ spec:
     - metadata:
         name: {{ .Values.dataStorage.volumeName }}
         labels:
-          {{- include "valkey.labels" . | nindent 10 }}
+          {{- include "valkey-cluster.labels" . | nindent 10 }}
           {{- with .Values.dataStorage.labels }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
