--- a/valkey-cluster/templates/netpolicy.yaml
+++ b/valkey-cluster/templates/netpolicy.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ include "valkey.fullname" $ }}
+  name: {{ include "valkey-cluster.fullname" $ }}
   {{- with .labels }}
   labels:
     {{- toYaml . | nindent 4 }}
@@ -14,7 +14,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      {{- include "valkey.selectorLabels" $ | nindent 6 }}
+      {{- include "valkey-cluster.selectorLabels" $ | nindent 6 }}
   policyTypes:
   {{- if .ingress }}
     - Ingress
