--- a/valkey-cluster/templates/service.yaml
+++ b/valkey-cluster/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "valkey.fullname" . }}-headless
+  name: {{ include "valkey-cluster.fullname" . }}-headless
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "valkey.labels" . | nindent 4 }}
+    {{- include "valkey-cluster.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   clusterIP: None
@@ -18,4 +18,4 @@ spec:
       protocol: TCP
       name: bus
   selector:
-    {{- include "valkey.selectorLabels" . | nindent 4 }}
+    {{- include "valkey-cluster.selectorLabels" . | nindent 4 }}
