--- a/valkey-cluster/templates/serviceaccount.yaml
+++ b/valkey-cluster/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "valkey.serviceAccountName" . }}
+  name: {{ include "valkey-cluster.serviceAccountName" . }}
   labels:
-    {{- include "valkey.labels" . | nindent 4 }}
+    {{- include "valkey-cluster.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
