Change default replicaCount
Signed-off-by: Dmytro Artamonov <artamonovdima355@gmail.com>

--- a/valkey-cluster/values.yaml
+++ b/valkey-cluster/values.yaml
@@ -1,6 +1,6 @@
 # Number of Valkey pods to run
-# For cluster mode, set this to at least to 6
-replicaCount: 1
+# For cluster mode, the number has to be more than 6
+replicaCount: 6
 
 global:
   imageRegistry: ""
