--- a/valkey-cluster/templates/init_config.yaml
+++ b/valkey-cluster/templates/init_config.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "valkey-cluster.fullname" . }}-init-scripts
+  namespace: {{ include "valkey-cluster.names.namespace" . }}
   labels:
     {{- include "valkey-cluster.labels" . | nindent 4 }}
 data:
