--- a/valkey-cluster/templates/service.yaml
+++ b/valkey-cluster/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "valkey-cluster.fullname" . }}-headless
-  namespace: {{ .Values.namespace }}
+  namespace: {{ include "valkey-cluster.names.namespace" . }}
   labels:
     {{- include "valkey-cluster.labels" . | nindent 4 }}
 spec:
