--- a/valkey-cluster/templates/serviceaccount.yaml
+++ b/valkey-cluster/templates/serviceaccount.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: {{ include "valkey-cluster.names.namespace" . }}
   name: {{ include "valkey-cluster.serviceAccountName" . }}
   labels:
     {{- include "valkey-cluster.labels" . | nindent 4 }}
