Update metrics.extraEnvs type from list to object in values files
Signed-off-by: Carlos Lopez <9074620+rastut@users.noreply.github.com>

--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -181,8 +181,8 @@ metrics:
       #   memory: 128Mi
     # Extra volume mounts for metrics exporter container
     extraVolumeMounts: []
-    # Environment variables to inject into Valkey container
-    extraEnvs: []
+    # Environment variables to inject into the metrics exporter container
+    extraEnvs: {}
     # Example:
     # LOG_LEVEL: info
     securityContext: {}
