--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -132,8 +132,9 @@ spec:
             httpGet:
               path: /
               port: metrics
-          {{- if .Values.metrics.exporter.resources }}
-          resources: {{- toYaml .Values.metrics.exporter.resources | nindent 12 }}
+          {{- with .Values.metrics.exporter.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with .Values.metrics.exporter.extraVolumeMounts }}
           volumeMounts:
