--- a/valkey/templates/podmonitor.yaml
+++ b/valkey/templates/podmonitor.yaml
@@ -7,8 +7,8 @@ metadata:
     {{- include "valkey.labels" . | nindent 4 }}
     app.kubernetes.io/part-of: valkey
     app.kubernetes.io/component: podmonitor
-    {{- if .Values.metrics.podMonitor.extraLabels }}
-    {{- toYaml .Values.metrics.podMonitor.extraLabels | nindent 4 }}
+    {{- with .Values.metrics.podMonitor.extraLabels }}
+    {{- toYaml . | nindent 4 }}
     {{- end }}
   {{- with .Values.metrics.podMonitor.annotations }}
   annotations:
@@ -17,23 +17,26 @@ metadata:
 spec:
   podMetricsEndpoints:
     - port: {{ .Values.metrics.podMonitor.port }}
-      {{- if .Values.metrics.podMonitor.interval }}
-      interval: {{ .Values.metrics.podMonitor.interval }}
+      {{- with .Values.metrics.podMonitor.interval }}
+      interval: {{ . }}
       {{- end }}
-      {{- if .Values.metrics.podMonitor.scrapeTimeout }}
-      scrapeTimeout: {{ .Values.metrics.podMonitor.scrapeTimeout }}
+      {{- with .Values.metrics.podMonitor.scrapeTimeout }}
+      scrapeTimeout: {{ . }}
       {{- end }}
-      {{- if .Values.metrics.podMonitor.honorLabels }}
-      honorLabels: {{ .Values.metrics.podMonitor.honorLabels }}
+      {{- with .Values.metrics.podMonitor.honorLabels }}
+      honorLabels: {{ . }}
       {{- end }}
       {{- with .Values.metrics.podMonitor.relabelings }}
-      relabelings: {{- toYaml . | nindent 6 }}
+      relabelings:
+        {{- toYaml . | nindent 6 }}
       {{- end }}
-      {{- if .Values.metrics.podMonitor.metricRelabelings }}
-      metricRelabelings: {{- toYaml .Values.metrics.podMonitor.metricRelabelings | nindent 6 }}
+      {{- with .Values.metrics.podMonitor.metricRelabelings }}
+      metricRelabelings:
+        {{- toYaml . | nindent 6 }}
       {{- end }}
-  {{- if .Values.metrics.podMonitor.podTargetLabels }}
-  podTargetLabels: {{- toYaml .Values.metrics.podMonitor.podTargetLabels | nindent 4 }}
+  {{- with .Values.metrics.podMonitor.podTargetLabels }}
+  podTargetLabels:
+    {{- toYaml . | nindent 4 }}
   {{- end }}
   {{- with .Values.metrics.podMonitor.sampleLimit -}}
   sampleLimit: {{ . }}
